# obstacles_from_points

./: CMakeLists.txt  README.md
include/: obstacles_from_points.h  obstacles_from_points_impl.h
src/: interface.cpp  obstacles_from_points.cpp  obstacles_from_points_impl.cpp
